--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
     <ul>
       <!-- Lista não ordenada -->
       <li>Pensamento Computacional</li>
-      <li>Programação Front-end e Back-end</li>
-      <li>Robótica Educacional</li>
-      <li>Mobile</li>
-      <li>Banco de Dados</li>
-      <li>Git e GitHub</li>
-      <li>Metodologias Ativas de Ensino</li>
+      <li>Ensino Fundamental</li>
+      <li>Ensino Médio Inconpleto</li>
+      <li>Futura intercambista</li>
+     
       <!-- Item da lista -->
     </ul>
   </section>
@@ -74,25 +72,21 @@
     <!-- Seção de experiência profissional -->
     <h2>Experiência Profissional</h2>
     <ul>
-      <li>Professor de Pensamento Computacional no Ensino Integral Fundamental II e Médio - Desde 2023</li>
-      <li>Professor de Programação e Robótica no Ensino Integral e Técnico - Desde 2023</li>
-      <li>Coordenador de Curso Técnico em Desenvolvimento de Sistemas</li>
-      <li>Responsável pelos Laboratórios de Informática (Linux e macOS)</li>
-      <li>Programador FullStack NodeJs, ReactJs MongoDb</li>
-
+      <li>estudante</li>
+      <li>monitora do ensino fundamental</li>
     </ul>
   </section>
 
   <section class="contato">
     <!-- Seção de contato -->
     <h2>Contato</h2>
-    <p><a href="richardson.cruz@escola.pr.gov.br" class="link">Email: richardson.cruz@escola.pr.gov.br</a></p>
-    <p> <a href="https://github.com/professorrichardson" class="link"> Repositório: github.com/professorrichardson</p></a>
+    <p><a href="julia.chaniuk.cruz@escola.pr.gov.br" class="link">Email: julia.chaniuk.cruz@escola.pr.gov.br</a></p>
+    <p> <a href="https://github.com/Julia Chaniuk" class="link"> Repositório: github.com/Julia Chaniuk</p></a>
   </section>
 
   <footer>
     <!-- Rodapé da página -->
-    <p>&copy; 2025 Richardson Schawarski. Projeto de exemplo para formação de professores 👨‍🏫👩‍🏫.</p>
+    <p>&copy; 2025 Julia Chaniuk estudante do ensino médio .</p>
     <!-- Texto de copyright e observação. &copy; → © (copyright) -->
   </footer>
 
