--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header>
   <div class="header-content">
-    <img src="img/richardson.jpg" alt="Foto de perfil" class="profile-img">
+    <img src="img/https://cdn-icons-png.flaticon.com/512/5182/5182011.png" alt="Foto de perfil" class="profile-img">
     <div class="header-text">
        <!-- Cabeçalho da página -->
       <h1>Julia Chaniuk</h1>
