--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
 
   <section class="formacao">
     <!-- Seção de formação acadêmica -->
-    <h2>Formação Acadêmica</h2>
-    <p>Bacharel em Sistemas de informação - Instituto Federal do Paraná (IFPR)</p>
-    <p>Licenciado em Matemática - UNIASSELVI (Formação Pedagógica)</p>
-    <p>Pós-graduação em Tecnologias Educacionais - UEL</p>
+    <h2>estudante do segundo ano do ensino medio</p>
     <!-- Parágrafo com informação -->
   </section>
 
