--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header>
   <div class="header-content">
-    <img src="img/https://cdn-icons-png.flaticon.com/512/5182/5182011.png" alt="Foto de perfil" class="profile-img">
+    <img src="https://drive.google.com/file/d/1q9cqGYiBNmwVf2p_WqdhRA1thmaXsSA2/view?usp=drive_link" alt="Foto de perfil" class="profile-img">
     <div class="header-text">
        <!-- Cabeçalho da página -->
       <h1>Julia Chaniuk</h1>
@@ -52,7 +52,7 @@
       <!-- Lista não ordenada -->
       <li>Pensamento Computacional</li>
       <li>Ensino Fundamental</li>
-      <li>Ensino Médio Inconpleto</li>
+      <li>Ensino Médio Incompleto</li>
       <li>Futura intercambista</li>
      
       <!-- Item da lista -->
