--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header>
   <div class="header-content">
-    <img src="https://drive.google.com/file/d/1q9cqGYiBNmwVf2p_WqdhRA1thmaXsSA2/view?usp=drive_link" alt="Foto de perfil" class="profile-img">
+    <img src="https://pt.vecteezy.com/arte-vetorial/2779291-jovem-hispanica-personagem-desenho-retrato-design" alt="foto">
     <div class="header-text">
        <!-- Cabeçalho da página -->
       <h1>Julia Chaniuk</h1>
